Kelsey Development Sandbox/src/objects/DS_CBCL_F__c.object
<CustomObject>
    <fields>
        <fullName>FCBTSS__c</fullName>
        <description>CBCL Total clinical significance</description>
        <label>FCBTSS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTSTNY__c</fullName>
        <description>CBCL Total T score - Num</description>
        <label>FCBTSTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTSTN__c</fullName>
        <description>CBCL Total T score - Num</description>
        <label>FCBTSTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBTSTY__c</fullName>
        <description>CBCL Total T score</description>
        <label>FCBTSTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBTST__c</fullName>
        <description>CBCL Total T score</description>
        <label>FCBTST</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWDP__c</fullName>
        <description>CBCL Withdrawn/Depressed percent</description>
        <label>FCBWDP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWDRN__c</fullName>
        <description>CBCL Withdrawn/Depressed raw score - Num</description>
        <label>FCBWDRN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBWDR__c</fullName>
        <description>CBCL Withdrawn/Depressed raw score</description>
        <label>FCBWDR</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWDS__c</fullName>
        <description>CBCL Withdrawn/Depressed clinical significance</description>
        <label>FCBWDS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWDTN__c</fullName>
        <description>CBCL Withdrawn/Depressed T score - Num</description>
        <label>FCBWDTN</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBWDT__c</fullName>
        <description>CBCL Withdrawn/Depressed T score</description>
        <label>FCBWDT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWPY__c</fullName>
        <description>CBCL Withdrawn percent</description>
        <label>FCBWPY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWRNY__c</fullName>
        <description>CBCL Withdrawn raw score - Num</description>
        <label>FCBWRNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBWRY__c</fullName>
        <description>CBCL Withdrawn raw score</description>
        <label>FCBWRY</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWSY__c</fullName>
        <description>CBCL Withdrawn clinical significance</description>
        <label>FCBWSY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBWTNY__c</fullName>
        <description>CBCL Withdrawn T score - Num</description>
        <label>FCBWTNY</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCBWTY__c</fullName>
        <description>CBCL Withdrawn T score</description>
        <label>FCBWTY</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBY100S__c</fullName>
        <description>100. Other, description</description>
        <label>FCBY100S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBY100__c</fullName>
        <description>100. Other</description>
        <label>FCBY100</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBY101S__c</fullName>
        <description>101. Other, description</description>
        <label>FCBY101S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBY101__c</fullName>
        <description>101. Other</description>
        <label>FCBY101</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBY102S__c</fullName>
        <description>102. Other, description</description>
        <label>FCBY102S</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBY102__c</fullName>
        <description>102. Other</description>
        <label>FCBY102</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBYMETH__c</fullName>
        <description>Administration Method - CBCL YOUNG</description>
        <label>FCBYMETH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FDOACO__c</fullName>
        <description>1. CBCL 6-18 date of administration</description>
        <label>FDOACO</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOACY__c</fullName>
        <description>1. CBCL 1.5-5 date of administration</description>
        <label>FDOACY</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Background_ID__r.FDOV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SECTION__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>SECTION</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STATUS_CBCL_0_5__c</fullName>
        <label>STATUS CBCL 0 5</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STATUS_CBCL_6_18__c</fullName>
        <label>STATUS CBCL 6 18</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DS CBCL F</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Background_ID__c</columns>
        <columns>Client__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DS CBCL F Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DS CBCL F</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CBCL_date_required</fullName>
        <active>true</active>
        <description>Either CBCLO or CBCLY need to be filled out</description>
        <errorConditionFormula>ISNULL(FDOACO__c) &amp;&amp;ISNULL(FDOACY__c)</errorConditionFormula>
        <errorMessage>Please indicate the date of administration.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CBCL_method_administered</fullName>
        <active>true</active>
        <description>How was this form (CBCL) administered? Either CBCL old or CBCL young must indicate the method administered.</description>
        <errorConditionFormula>ISPICKVAL(FCBOMETH__c,&apos;&apos;) &amp;&amp; ISPICKVAL(FCBYMETH__c, &apos;&apos;)</errorConditionFormula>
        <errorMessage>Please indicate how this form was administered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_O_date_cannot_be_before_FDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt; FDOACO__c</errorConditionFormula>
        <errorDisplayField>FDOACO__c</errorDisplayField>
        <errorMessage>Follow-up CBCL date of administration cannot be before Follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_O_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; FDOACO__c</errorConditionFormula>
        <errorDisplayField>FDOACO__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_O_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>FDOACO__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>FDOACO__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_Y_date_cannot_be_before_FDOV</fullName>
        <active>true</active>
        <errorConditionFormula>FDOV__c &gt; FDOACY__c</errorConditionFormula>
        <errorDisplayField>FDOACY__c</errorDisplayField>
        <errorMessage>Follow-up CBCL date of administration cannot be before Follow-up date of visit.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_Y_date_cannot_be_before_birth</fullName>
        <active>true</active>
        <errorConditionFormula>Client__r.DOB1__c &gt; FDOACY__c</errorConditionFormula>
        <errorDisplayField>FDOACY__c</errorDisplayField>
        <errorMessage>Follow-up date of administration cannot be before birth.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cbcl_Y_date_cannot_be_future</fullName>
        <active>true</active>
        <errorConditionFormula>FDOACY__c &gt; TODAY()</errorConditionFormula>
        <errorDisplayField>FDOACY__c</errorDisplayField>
        <errorMessage>Enter a valid date.</errorMessage>
    </validationRules>
</CustomObject>